fixed gap on the right

--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@ div.seperator {
 
 html {
   background-color: #222;
+  overflow-x: hidden;
 }
 
 /* === Banner === */
